corrected z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,8 @@ body {
   position: fixed;
   z-index: 100;
   height: 7vh;
-  visibility: hidden; 
+  visibility: hidden;
+  z-index: 999;
 }
 
 .navbar.active {
@@ -258,7 +259,7 @@ nav ul li {
 .skills {
   text-align: center;
   padding-top: 2rem;
-  background: var(--neutral);
+  /* background: var(--neutral); */
   top: 0;
   overflow: hidden;
 }
@@ -278,10 +279,6 @@ nav ul li {
   border-radius: 50%;
   width: 3.12rem;
   height: 3.12rem;
-}
-
-.effect {
-  position: relative;
 }
 
 .steelCircle {
@@ -307,7 +304,6 @@ nav ul li {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 5;
 }
 
 .skillsLogo {
@@ -323,11 +319,13 @@ nav ul li {
   border-radius: 50%;
   content: "";
   position: absolute;
+  z-index: -2; /* ************************************************** */
   width: 3.12rem;
   height: 3.12rem;
   left: 0;
   bottom: 0;
   transition: transform 0.3s ease;
+  /* z-index: -2; */
 }
 
 .skills .steelCircle:hover::after {
@@ -344,6 +342,7 @@ nav ul li {
   border-radius: 50%;
   content: "";
   position: absolute;
+  z-index: -2; /* ************************************************** */
   width: 3.12rem;
   height: 3.12rem;
   left: 0;
@@ -367,6 +366,7 @@ nav ul li {
   border-radius: 50%;
   content: "";
   position: absolute;
+  z-index: -2; /* ************************************************** */
   width: 3.12rem;
   height: 3.12rem;
   left: 0;
@@ -389,6 +389,7 @@ nav ul li {
   border-radius: 50%;
   content: "";
   position: absolute;
+  z-index: -2; /* ************************************************** */
   width: 3.12rem;
   height: 3.12rem;
   left: 0;
@@ -457,7 +458,7 @@ nav ul li {
   border: 0.35rem solid var(--steel);
   background: var(--cornflower);
   margin-top: 0.625rem;
-  z-index: 1;
+  z-index: -1;
 }
 
 .timeline-content {
